--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="utf-8"/>
-    <link rel="favicon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="favicon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
     <meta name="description"  content="과연 레스턴은 호국 요람의 마수에서 탈출할 수 있을 것인가? 다음 시간에 계속!" />
